# finanzas

./: .env.development.example  .env.production.example  .gitignore  docker-compose.test.yml
docs/: architecture_plan.md  data_lake_plan.md  execution_probe_observations.md  fractal_risk_plan.md  game_theory_plan.md  implementation_roadmap.md  interface_plan.md  market_discovery_plan.md  modeling_plan.md  nim_research_plan.md  pre_live_dry_run_runbook.md  production_runbook.md  repo_ideas.md  sentiment_and_whale_signals.md  vscode_1_119_workflow.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  playwright.public.config.ts  tsconfig.node.json  vite.config.ts
python-service/: requirements-dev.txt  requirements-ml.txt  requirements.txt
rust-engine/: Cargo.toml
rust-engine/migrations/: 0001_initial.sql
rust-engine/src/: clob_client.rs  config.rs  control.rs  executor.rs  main.rs  market_data.rs  metrics.rs  orderbook.rs  reconciliation.rs  redis_client.rs  risk.rs  state_store.rs  ws_client.rs
rust-engine/tests/fixtures/user_ws/: cancel_confirmed.json  malformed_payload.json  order_update.json  trade_fill.json
scripts/: analyze_pre_live_blockers.sh  check_all.sh  export_openapi.py  finalize_restricted_blocklist_decision.sh  integration_smoke.py  prepare_execution_probe_cycle.sh  public_operator_smoke.py  run_execution_probe_v5_observation.sh  run_execution_probe_v6_cycle.sh  run_execution_probe_v6_observation.sh  run_execution_probe_v7_cycle.sh  run_execution_probe_v7_observation.sh  run_integration_smoke.sh  run_operator_api.sh  (+8 more)
(+135 files in other folders)
