[package]
name = "rust-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
reqwest = { version = "0.11", features = ["json"] }
redis = { version = "1.2.0", features = ["tokio-comp", "connection-manager", "streams"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ethers = { version = "2", features = ["rustls"] }
polymarket-client-sdk = { version = "0.4.4", features = ["clob"] }
alloy-signer-local = "1.8"
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
dotenv = "0.15"
